# pcs

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  merge_results.bk  mergeplot.py  plot.py  results.bk
acc/: Makefile  Makefile.in  compute.c  config.h  config.status  configure  configure.ac  matmul.c
acc/report/: assignment_2.tex  compute.c  main.c  reduction.c  results_bonus.txt
cpl/: Makefile  common.chpl  compute.chpl  compute.job  compute1.job  compute16.job  compute2.job  compute4.job  compute8.job  compute_manual.chpl  dist.job  main.chpl  set_env
cpl/report/: assignment_2.tex  extradim.c  main.c  reduce.c
cuda/: Makefile.am  compute.cu  configure.ac
omp/: Makefile  Makefile.am  Makefile.in  compute.c  config.h  config.status  configure  configure.ac  merge.c  vec.c
omp/report/: README  assignment_2.tex  reduction.c
phi/: Makefile.am  compute.c  configure.ac
pth/: Makefile  Makefile.am  Makefile.in  barrier.c  compute.c  config.h  config.status  configure  locking.c  note.txt  pipesort.c
pth/report/: assignment_2.tex  reductions.c  sempushpull.c  synch.c  threadspwn.c
seq/: Makefile  Makefile.in  README  compute.c  config.h  config.status  configure
seq/report/: assignment1.tex  boundary_checks.c  constants.c  inner_loop.c  main_calculation.c
slides2/: pres2.tex
src/: input.c  input.h
